--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <td>4</td>
         <td>Sony Entertainment Television India</td>
         <td>Yes</td>
-        <td>113</td>
+        <td>162</td>
         <td>Hindi</td>
         <td>Entertainment</td>
         <td>India</td>
@@ -115,22 +115,10 @@
         <td>United States</td>
       </tr>
     </table>
-    <!--
-<!--Table Headings-->
 
-    Rank Name Brand channel Subscribers (millions) Primary language Category Country
-    <!--Table Data-->
-    1 T-Series Yes 249 Hindi Music India
-    2 MrBeast No 184 English Entertainment United States
-    3 Cocomelon Yes 165 English Education United States
-    4 Sony Entertainment Television India Yes 162 Hindi Entertainment India
-    5 Kids Diana Show Yes 113 English Entertainment Ukraine-United States
-    6 PewDiePie No 111 English Entertainment Sweden
-    7 Like Nastya No 107 English Entertainment Russia-United States
-    8 Vlad and Niki No 101 English Entertainment Russia-United States
-    9 Zee Music Company Yes 99.5 Hindi Music India
-    10 WWE Yes 97.1 English Sports United States
-    <!--Table Caption-->
+ <p>
+    Which of these
+    </p>
     Data: Wikipedia
     <!--Webform Question-->
     Which of these YouTube channels have you watched before?
